Updated page Assembly/pl

--- a/wiki/pl/Assembly.html
+++ b/wiki/pl/Assembly.html
@@ -3,7 +3,7 @@
 <li><a href="../Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblage (82% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblaggio (82% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/Assembly.html" class="mw-pt-progress mw-pt-progress--med" title="Montagem (24% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1073;&#1086;&#1088;&#1082;&#1072; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="&#51312;&#47549;&#54408; (82% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -33,11 +33,8 @@
 </p><p><span id="Constrained_assembly"></span>
 </p>
 <h3><span id="Z.C5.82o.C5.BCenie_z_wi.C4.99zami"></span><span class="mw-headline" id="Z&#322;o&#380;enie_z_wi&#281;zami">Z&#322;o&#380;enie z wi&#281;zami</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Mo&#380;na te&#380; u&#380;y&#263; wbudowanego <a href="../pl/Assembly_Workbench.html" title="Assembly Workbench/pl">&#347;rodowiska pracy Z&#322;o&#380;enie</a> lub jego zewn&#281;trznych odpowiednik&oacute;w, jak <span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/A2plus_Workbench.html" title="A2plus Workbench/pl">A2plus</a>, <span typeof="mw:File"><a href="../index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="../File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Assembly3_Workbench.html" title="Assembly3 Workbench/pl">Z&#322;o&#380;enie 3</a>, czy <span typeof="mw:File"><a href="../index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="../File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Assembly4_Workbench.html" title="Assembly4 Workbench/pl">Z&#322;o&#380;enie 4</a>. Nale&#380;y pami&#281;ta&#263;, &#380;e <a href="../pl/Assembly2_Workbench.html" title="Assembly2 Workbench/pl">Z&#322;o&#380;enie 2</a> nie jest utrzymywany, wi&#281;c nie jest zalecany dla nowych modeli.
-</p>
-</div>
-<p>&#346;rodowiska pracy z&#322;o&#380;e&#324; wykorzystuj&#261; wi&#261;zania i wyra&#380;enia do tworzenia relacji mi&#281;dzy obiektami w modelu, aby matematycznie powi&#261;za&#263; obiekty w miejscu, na przyk&#322;ad: "ta &#347;ciana powinna przylega&#263; do tej drugiej &#347;ciany", "ten walec powinien by&#263; wsp&oacute;&#322;&#347;rodkowy z tym okr&#281;giem", "ten punkt powinien pod&#261;&#380;a&#263; za t&#261; kraw&#281;dzi&#261;" itp.
+<p>Mo&#380;na te&#380; u&#380;y&#263; wbudowanego <span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>  <a href="../pl/Assembly_Workbench.html" title="Assembly Workbench/pl">&#347;rodowiska pracy Z&#322;o&#380;enie</a> lub jego zewn&#281;trznych odpowiednik&oacute;w, jak <span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/A2plus_Workbench.html" title="A2plus Workbench/pl">A2plus</a>, <span typeof="mw:File"><a href="../index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="../File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Assembly3_Workbench.html" title="Assembly3 Workbench/pl">Z&#322;o&#380;enie 3</a>, czy <span typeof="mw:File"><a href="../index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="../File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Assembly4_Workbench.html" title="Assembly4 Workbench/pl">Z&#322;o&#380;enie 4</a>. Nale&#380;y pami&#281;ta&#263;, &#380;e <a href="../pl/Assembly2_Workbench.html" title="Assembly2 Workbench/pl">Z&#322;o&#380;enie 2</a> nie jest utrzymywany, wi&#281;c nie jest zalecany dla nowych modeli.
+</p><p>&#346;rodowiska pracy z&#322;o&#380;e&#324; wykorzystuj&#261; wi&#261;zania i wyra&#380;enia do tworzenia relacji mi&#281;dzy obiektami w modelu, aby matematycznie powi&#261;za&#263; obiekty w miejscu, na przyk&#322;ad: "ta &#347;ciana powinna przylega&#263; do tej drugiej &#347;ciany", "ten walec powinien by&#263; wsp&oacute;&#322;&#347;rodkowy z tym okr&#281;giem", "ten punkt powinien pod&#261;&#380;a&#263; za t&#261; kraw&#281;dzi&#261;" itp.
 </p><p>Jest to zaawansowane wykorzystanie oprogramowania, kt&oacute;re jest zwykle u&#380;ywane w z&#322;o&#380;onych systemach mechanicznych. Je&#347;li tw&oacute;j <a href="../pl/Model.html" title="Model/pl">model</a> nie jest bardzo skomplikowany, to u&#380;ycie &#347;rodowiska do z&#322;o&#380;e&#324; mo&#380;e nie by&#263; konieczne.
 </p><p><span id="Notes"></span>
 </p>
@@ -105,33 +102,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114181050
+Cached time: 20260114181100
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.106 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 29479/2097152 bytes
 Template argument size: 11701/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1550/5000000 bytes
+Unstrip post&#8208;expand size: 1554/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.606      1 -total
- 28.87%    4.505      1 Template:Document_objects_navi/pl
- 28.68%    4.475      1 Template:Std_Base_navi/pl
- 13.20%    2.060      1 Template:Userdocnavi/pl
- 11.08%    1.730      3 Template:Navigation_menu_2
- 10.59%    1.652      1 Template:TOCright
-  8.73%    1.363      1 Template:Caption
-  7.37%    1.151      1 Template:Button
+100.00%   15.304      1 -total
+ 37.41%    5.726      1 Template:Std_Base_navi/pl
+ 13.62%    2.084      1 Template:Document_objects_navi/pl
+ 13.36%    2.045      1 Template:Caption
+ 12.73%    1.949      3 Template:Navigation_menu_2
+ 12.45%    1.905      1 Template:TOCright
+ 10.33%    1.581      1 Template:Button
+  9.04%    1.383      1 Template:Userdocnavi/pl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236747-0!canonical and timestamp 20260114181050 and revision id 1738482. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236747-0!canonical and timestamp 20260114181100 and revision id 1738484. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
