Updated page Arch Space/fr

--- a/wiki/fr/Arch_Space.html
+++ b/wiki/fr/Arch_Space.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Space/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Arch+Space&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Arch_Space.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Raum (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Arch_Space.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Raum (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Arch_Space.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Arch Space (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Espacio (9% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Spazio (44% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Arch_Space.html" class="mw-pt-progress mw-pt-progress--high" title="Architektura: Przestrze&#324; (97% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Arch_Space.html" class="mw-pt-progress mw-pt-progress--complete" title="Architektura: Przestrze&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Espa&ccedil;o (16% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Space/Spa&#539;iu (9% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Space (3% translated)" lang="sv" dir="ltr">svenska</a></li>
@@ -94,10 +94,10 @@
 <p><span id="Limitations"></span>
 </p>
 <h3><span class="mw-headline" id="Limitations">Limitations</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li>Les propri&eacute;t&eacute;s des bords ne sont actuellement pas modifiables via l'interface graphique.</li>
+<ul><li>Les empreintes non convexes ne sont pas prises en charge (<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/issues/6091">issue #6091</a>).</li>
+<li>Les soustractions de volume ne sont pas prises en charge (<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/issues/24579">issue #24579 et solution de contournement</a>).</li>
+<li>Les propri&eacute;t&eacute;s des ar&ecirc;tes ne sont actuellement pas modifiables via l'interface graphique.</li>
 <li>Voir sur le forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=9&amp;t=4275">forum announcement</a>.</li></ul>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -236,35 +236,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114152332
+Cached time: 20260114190704
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.125 seconds
-Real time usage: 0.156 seconds
-Preprocessor visited node count: 1785/1000000
+CPU time usage: 0.141 seconds
+Real time usage: 0.306 seconds
+Preprocessor visited node count: 1784/1000000
 Post&#8208;expand include size: 44286/2097152 bytes
 Template argument size: 14276/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7353/5000000 bytes
+Unstrip post&#8208;expand size: 7367/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.911      1 -total
- 24.81%   13.129     28 Template:Variable
- 23.47%   12.419     18 Template:PropertyData
- 16.65%    8.808      1 Template:BIM_Tools_navi/fr
- 12.64%    6.689      2 Template:Navigation_menu_2
- 10.59%    5.605     10 Template:PropertyView
-  9.17%    4.854      1 Template:Userdocnavi/fr
-  8.14%    4.304     32 Template:Incode
-  7.81%    4.133      1 Template:GuiCommand/fr
-  6.78%    3.589      2 Template:Docnav/fr
+100.00%   93.832      1 -total
+ 28.65%   26.880     18 Template:PropertyData
+ 23.92%   22.448     28 Template:Variable
+ 11.83%   11.098      1 Template:BIM_Tools_navi/fr
+ 10.46%    9.815     10 Template:PropertyView
+  8.80%    8.255      2 Template:Navigation_menu_2
+  7.56%    7.094      1 Template:Emphasis
+  5.98%    5.611      4 Template:Code
+  5.57%    5.224      1 Template:GuiCommand/fr
+  4.84%    4.542      2 Template:Properties_Title
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13962-0!canonical and timestamp 20260114152332 and revision id 1738300. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13962-0!canonical and timestamp 20260114190704 and revision id 1738486. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
