--- a/wiki/fr/Arch_Window.html
+++ b/wiki/fr/Arch_Window.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Window/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Arch+Window&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Arch_Window.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Fenster (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Arch_Window.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Fenster (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Arch_Window.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Arch Window (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Arch Ventana (26% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Finestra (68% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Arch_Window.html" class="mw-pt-progress mw-pt-progress--high" title="Architektura: Okna (98% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Arch_Window.html" class="mw-pt-progress mw-pt-progress--complete" title="Architektura: Okna (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Janela (16% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Fereastr&#259; (21% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Arch_Window.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Window (4% translated)" lang="sv" dir="ltr">svenska</a></li>
@@ -100,17 +100,14 @@ Il est con&ccedil;u pour &ecirc;tre ind&eacute;pendant ou devenir "h&ocirc;te" &
 </p><p><span id="Creating_a_custom_window"></span>
 </p>
 <h3><span id="Cr.C3.A9er_une_fen.C3.AAtre_personnalis.C3.A9e"></span><span class="mw-headline" id="Cr&eacute;er_une_fen&ecirc;tre_personnalis&eacute;e">Cr&eacute;er une fen&ecirc;tre personnalis&eacute;e</span></h3>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionnez une face ou un objet Arch o&ugrave; vous voulez ins&eacute;rer votre fen&ecirc;tre.</li>
-<li>Basculez vers l'<a href="../fr/Sketcher_Workbench.html" title="Sketcher Workbench/fr">atelier Sketcher</a>.</li>
-<li>Cr&eacute;ez une nouvelle esquisse.</li>
-<li>Dessinez une ou plusieurs formes ferm&eacute;es (boucles). Faites bien attention &agrave; l'ordre de cr&eacute;ation de ces boucles, la num&eacute;rotation des "polylignes" dans le <a href="../fr/Task_panel.html" class="mw-redirect" title="Task panel/fr">panneau des t&acirc;ches</a> ("&Eacute;l&eacute;ments de la fen&ecirc;tre") en d&eacute;pend.</li>
+<ol><li>Vous pouvez &eacute;galement s&eacute;lectionner une face de l'objet Arch o&ugrave; vous souhaitez inclure la fen&ecirc;tre.</li>
+<li>Cr&eacute;ez une nouvelle esquisse &agrave; l'aide de la commande <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Sketch.svg&amp;filetimestamp=20240608153905&amp;.html" class="mw-file-description"><img src="../File/BIM_Sketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Sketch.html" title="BIM Sketch/fr">Esquisse</a></span>.</li>
+<li>Pour un placement correct, le coin inf&eacute;rieur gauche de la fen&ecirc;tre doit se trouver &agrave; l'origine de l'esquisse.</li>
+<li>Dessinez une ou plusieurs polylignes ferm&eacute;es (boucles). Faites tr&egrave;s attention &agrave; l'ordre de cr&eacute;ation de ces boucles, car la num&eacute;rotation des &laquo;&nbsp;polylignes&nbsp;&raquo; dans le <a href="../fr/Task_Panel.html" title="Task Panel/fr">panneau de t&acirc;ches</a> (&laquo;&nbsp;&Eacute;l&eacute;ments de fen&ecirc;tre&nbsp;&raquo;) en d&eacute;pend.</li>
 <li>Fermez l'esquisse.</li>
-<li>Retournez &agrave; l'<a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">atelier BIM</a></li>
-<li>Lancez l'outil comme d&eacute;crit ci-dessus.</li>
-<li>Pour ajuster les composants de la fen&ecirc;tre et diverses propri&eacute;t&eacute;s, entrez dans le <a href="../fr/Task_panel.html" class="mw-redirect" title="Task panel/fr">panneau des t&acirc;ches</a> de la fen&ecirc;tre en double-cliquant sur l'objet cr&eacute;&eacute; dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
-<li>Notez que, puisque les composants qui suivent un composant &agrave; charni&egrave;re s'articulent &eacute;galement, tous les composants fixes, tels que les cadres ext&eacute;rieurs et les panneaux de verre fixes, doivent &ecirc;tre d&eacute;finis avant tout composant &agrave; charni&egrave;re. Un panneau de verre dans un cadre &agrave; charni&egrave;re doit &ecirc;tre d&eacute;fini apr&egrave;s ce cadre et avant tout autre composant &agrave; charni&egrave;re.</li></ol>
-</div>
+<li>Lancez l'outil comme d&eacute;crit ci-dessus, avec l'esquisse s&eacute;lectionn&eacute;e.</li>
+<li>Pour ajuster les composants de la fen&ecirc;tre et diverses propri&eacute;t&eacute;s, acc&eacute;dez au <a href="../fr/Task_Panel.html" title="Task Panel/fr">panneau des t&acirc;ches</a> de la fen&ecirc;tre en double-cliquant sur l'objet cr&eacute;&eacute; dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
+<li>Notez que, comme les composants qui suivent un composant &agrave; charni&egrave;re s'articulent &eacute;galement, tous les composants fixes, tels que les cadres ext&eacute;rieurs et les panneaux de verre fixes, doivent &ecirc;tre d&eacute;finis avant tout composant articul&eacute;. De m&ecirc;me, un panneau de verre dans un cadre &agrave; charni&egrave;re doit &ecirc;tre d&eacute;fini apr&egrave;s ce cadre et avant tout autre composant &agrave; charni&egrave;re.</li></ol>
 <p><span id="Presets"></span>
 </p>
 <h2><span id="Pr.C3.A9r.C3.A9glages"></span><span class="mw-headline" id="Pr&eacute;r&eacute;glages">Pr&eacute;r&eacute;glages</span></h2>
@@ -338,35 +335,35 @@ Les composants ont les propri&eacute;t&eacute;s suivantes&nbsp;:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114152454
+Cached time: 20260114191252
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.203 seconds
-Real time usage: 0.613 seconds
-Preprocessor visited node count: 1700/1000000
-Post&#8208;expand include size: 42442/2097152 bytes
-Template argument size: 14251/2097152 bytes
+CPU time usage: 0.204 seconds
+Real time usage: 0.281 seconds
+Preprocessor visited node count: 1704/1000000
+Post&#8208;expand include size: 42827/2097152 bytes
+Template argument size: 14307/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 13711/5000000 bytes
+Unstrip post&#8208;expand size: 13725/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  279.373      1 -total
- 10.69%   29.861      1 Template:BIM_Tools_navi/fr
- 10.51%   29.375     21 Template:PropertyData
-  8.93%   24.954      2 Template:Navigation_menu_2
-  6.68%   18.667     21 Template:Variable
-  5.06%   14.131      1 Template:GuiCommand/fr
-  4.53%   12.646      2 Template:Value
-  3.98%   11.116      1 Template:TitleProperty
-  3.07%    8.580      4 Template:Code
-  2.96%    8.265     38 Template:Incode
+100.00%   96.844      1 -total
+ 16.01%   15.507     21 Template:PropertyData
+ 12.27%   11.884     21 Template:Variable
+ 11.04%   10.694      1 Template:BIM_Tools_navi/fr
+  8.43%    8.163      2 Template:Navigation_menu_2
+  6.45%    6.251      1 Template:GuiCommand/fr
+  5.07%    4.909      2 Template:Caption
+  3.96%    3.839      2 Template:Docnav/fr
+  3.56%    3.448      1 Template:Userdocnavi/fr
+  3.43%    3.319      1 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2500-0!canonical and timestamp 20260114152454 and revision id 1738309. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2500-0!canonical and timestamp 20260114191251 and revision id 1738488. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
