Updated page Assembly/fr

--- a/wiki/fr/Assembly.html
+++ b/wiki/fr/Assembly.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Assembly/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Assembly&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Zusammenbau (82% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Zusammenbau (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblaggio (82% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Z&#322;o&#380;enie (82% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Z&#322;o&#380;enie (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Assembly.html" class="mw-pt-progress mw-pt-progress--med" title="Montagem (24% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1073;&#1086;&#1088;&#1082;&#1072; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="&#51312;&#47549;&#54408; (82% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -21,14 +21,11 @@
 </p>
 <h3><span class="mw-headline" id="Assemblage_manuel">Assemblage manuel</span></h3>
 <p>De mani&egrave;re g&eacute;n&eacute;rale, vous n'avez pas besoin d'outils sp&eacute;ciaux pour cr&eacute;er des assemblages, vous avez juste besoin de disposer de nombreux <a href="../fr/Body.html" title="Body/fr">corps</a> diff&eacute;rents d'une mani&egrave;re ou d'une autre.
+</p><p>Pour positionner les corps o&ugrave; vous le souhaitez, vous pouvez
 </p>
-<div class="mw-translate-fuzzy">
-<p>Pour positionner les corps o&ugrave; vous le souhaitez, vous pouvez
-</p>
-<ul><li>utiliser l'outil <a href="../fr/Std_TransformManip.html" title="Std TransformManip/fr">Std Transformer</a>,</li>
+<ul><li>utiliser l'outil <span typeof="mw:File"><a href="../index.php?title=Std_TransformManip.svg&amp;filetimestamp=20240411193912&amp;.html" class="mw-file-description"><img src="../File/Std_TransformManip.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_TransformManip.html" title="Std TransformManip/fr">Std Transformer</a>,</li>
 <li>utiliser la fen&ecirc;tre de dialogue <span typeof="mw:File"><a href="../index.php?title=Std_Placement.svg&amp;filetimestamp=20200107104731&amp;.html" class="mw-file-description"><img src="../File/Std_Placement.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_Placement.html" title="Std Placement/fr">Std Positionner</a>, ou</li>
-<li>modifier la propri&eacute;t&eacute; de <a href="../fr/Placement.html" title="Placement/fr">placement</a> directement dans l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>.</li></ul>
-</div>
+<li>modifier la propri&eacute;t&eacute; de <a href="../fr/Placement.html" title="Placement/fr">placement</a> directement dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>.</li></ul>
 <div class="mw-translate-fuzzy">
 <p>Vous pouvez utiliser l'un des pseudo-assemblages faits par un des <a href="../fr/External_workbenches.html" title="External workbenches/fr">ateliers externes</a> comme Lattice2, Manipulator, Part-o-magic ou WorkFeature, pour vous aider &agrave; trouver des intersections, mesurer des distances et distribuer vos objets de la mani&egrave;re souhait&eacute;e.
 </p>
@@ -114,33 +111,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114150336
+Cached time: 20260114191340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.097 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.276 seconds
 Preprocessor visited node count: 407/1000000
 Post&#8208;expand include size: 33867/2097152 bytes
 Template argument size: 13458/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1545/5000000 bytes
+Unstrip post&#8208;expand size: 1555/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.046      1 -total
- 36.89%    7.394      1 Template:Std_Base_navi/fr
- 35.66%    7.148      3 Template:Navigation_menu_2
- 23.87%    4.785      1 Template:Userdocnavi/fr
- 21.77%    4.364      1 Template:Document_objects_navi/fr
-  5.54%    1.111      1 Template:Caption
-  5.20%    1.043      1 Template:TOCright
-  4.09%    0.819      1 Template:Button
+100.00%   66.584      1 -total
+ 43.21%   28.770      1 Template:Std_Base_navi/fr
+ 38.52%   25.650      3 Template:Navigation_menu_2
+ 18.29%   12.178      1 Template:Document_objects_navi/fr
+ 14.44%    9.615      1 Template:Userdocnavi/fr
+ 10.95%    7.288      1 Template:TOCright
+  5.62%    3.745      1 Template:Caption
+  4.63%    3.084      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114150336 and revision id 1738270. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114191339 and revision id 1738490. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
