--- a/wiki/fr/Assembly.html
+++ b/wiki/fr/Assembly.html
@@ -26,11 +26,8 @@
 <ul><li>utiliser l'outil <span typeof="mw:File"><a href="../index.php?title=Std_TransformManip.svg&amp;filetimestamp=20240411193912&amp;.html" class="mw-file-description"><img src="../File/Std_TransformManip.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_TransformManip.html" title="Std TransformManip/fr">Std Transformer</a>,</li>
 <li>utiliser la fen&ecirc;tre de dialogue <span typeof="mw:File"><a href="../index.php?title=Std_Placement.svg&amp;filetimestamp=20200107104731&amp;.html" class="mw-file-description"><img src="../File/Std_Placement.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_Placement.html" title="Std Placement/fr">Std Positionner</a>, ou</li>
 <li>modifier la propri&eacute;t&eacute; de <a href="../fr/Placement.html" title="Placement/fr">placement</a> directement dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>.</li></ul>
-<div class="mw-translate-fuzzy">
-<p>Vous pouvez utiliser l'un des pseudo-assemblages faits par un des <a href="../fr/External_workbenches.html" title="External workbenches/fr">ateliers externes</a> comme Lattice2, Manipulator, Part-o-magic ou WorkFeature, pour vous aider &agrave; trouver des intersections, mesurer des distances et distribuer vos objets de la mani&egrave;re souhait&eacute;e.
-</p>
-</div>
-<p>En g&eacute;n&eacute;ral, l'objet <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_Part.html" title="Std Part/fr">Std Part</a></span> a &eacute;t&eacute; con&ccedil;u pour servir de bloc de construction de base pour cr&eacute;er des assemblages. Cet objet est utilis&eacute; pour regrouper plusieurs <a href="../fr/Body.html" title="Body/fr">corps</a> et les d&eacute;placer ensemble en tant qu'unit&eacute;, c'est-&agrave;-dire en tant que sous-ensemble. Ensuite, ce sous-assemblage peut &ecirc;tre plac&eacute; &agrave; c&ocirc;t&eacute; ou utilis&eacute; &agrave; l'int&eacute;rieur d'autres sous-assemblages afin de cr&eacute;er l'assemblage final.
+<p>Vous pouvez utiliser l'un des pseudo-assemblages des <a href="../fr/External_workbenches.html" title="External workbenches/fr">ateliers externes</a>, tels que <span typeof="mw:File"><a href="../index.php?title=Lattice2_workbench_icon.svg&amp;filetimestamp=20160611191139&amp;.html" class="mw-file-description"><img src="../File/Lattice2_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Lattice2_Workbench.html" title="Lattice2 Workbench/fr">Lattice2</a>, <span typeof="mw:File"><a href="../index.php?title=Manipulator_workbench_icon.svg&amp;filetimestamp=20181001182959&amp;.html" class="mw-file-description"><img src="../File/Manipulator_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Manipulator_Workbench.html" title="Manipulator Workbench/fr">Manipulator</a>, <a rel="nofollow" class="external text" href="https://github.com/DeepSOIC/Part-o-magic">Part-o-magic</a> ou <span typeof="mw:File"><a href="../index.php?title=Workfeature_workbench_icon.svg&amp;filetimestamp=20200209045750&amp;.html" class="mw-file-description"><img src="../File/Workfeature_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Workfeature_Workbench.html" title="Workfeature Workbench/fr">WorkFeature</a>, pour vous aider &agrave; trouver des intersections, mesurer des distances et r&eacute;partir vos objets comme vous le souhaitez.
+</p><p>En g&eacute;n&eacute;ral, l'objet <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_Part.html" title="Std Part/fr">Std Part</a></span> a &eacute;t&eacute; con&ccedil;u pour servir de bloc de construction de base pour cr&eacute;er des assemblages. Cet objet est utilis&eacute; pour regrouper plusieurs <a href="../fr/Body.html" title="Body/fr">corps</a> et les d&eacute;placer ensemble en tant qu'unit&eacute;, c'est-&agrave;-dire en tant que sous-ensemble. Ensuite, ce sous-assemblage peut &ecirc;tre plac&eacute; &agrave; c&ocirc;t&eacute; ou utilis&eacute; &agrave; l'int&eacute;rieur d'autres sous-assemblages afin de cr&eacute;er l'assemblage final.
 </p><p><span id="Constrained_assembly"></span>
 </p>
 <h3><span class="mw-headline" id="Assemblage_contraint">Assemblage contraint</span></h3>
@@ -111,13 +108,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114191340
+Cached time: 20260114191809
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.276 seconds
-Preprocessor visited node count: 407/1000000
+CPU time usage: 0.079 seconds
+Real time usage: 0.133 seconds
+Preprocessor visited node count: 412/1000000
 Post&#8208;expand include size: 33867/2097152 bytes
 Template argument size: 13458/2097152 bytes
 Highest expansion depth: 5/100
@@ -127,17 +124,17 @@ Unstrip post&#8208;expand size: 1555/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.584      1 -total
- 43.21%   28.770      1 Template:Std_Base_navi/fr
- 38.52%   25.650      3 Template:Navigation_menu_2
- 18.29%   12.178      1 Template:Document_objects_navi/fr
- 14.44%    9.615      1 Template:Userdocnavi/fr
- 10.95%    7.288      1 Template:TOCright
-  5.62%    3.745      1 Template:Caption
-  4.63%    3.084      1 Template:Button
+100.00%   21.061      1 -total
+ 49.94%   10.518      1 Template:Std_Base_navi/fr
+ 31.78%    6.694      3 Template:Navigation_menu_2
+ 14.32%    3.016      1 Template:Document_objects_navi/fr
+ 12.09%    2.547      1 Template:Userdocnavi/fr
+  9.61%    2.023      1 Template:Caption
+  6.66%    1.403      1 Template:Button
+  5.46%    1.150      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114191339 and revision id 1738490. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114191809 and revision id 1738492. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
