Updated page Assembly/fr

--- a/wiki/fr/Assembly.html
+++ b/wiki/fr/Assembly.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Assembly/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Assembly&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Zusammenbau (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblaggio (82% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Z&#322;o&#380;enie (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Assembly.html" class="mw-pt-progress mw-pt-progress--med" title="Montagem (24% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -31,11 +31,8 @@
 </p><p><span id="Constrained_assembly"></span>
 </p>
 <h3><span class="mw-headline" id="Assemblage_contraint">Assemblage contraint</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Vous pouvez &eacute;galement utiliser l'<a href="../fr/Assembly_Workbench.html" title="Assembly Workbench/fr">atelier Assembly</a> int&eacute;gr&eacute; ou des extensions, comme <span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/A2plus_Workbench.html" title="A2plus Workbench/fr">A2plus</a>, <span typeof="mw:File"><a href="../index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="../File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly3_Workbench.html" title="Assembly3 Workbench/fr">Assembly3</a> ou <span typeof="mw:File"><a href="../index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="../File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly4_Workbench.html" title="Assembly4 Workbench/fr">Assembly4</a>. Noter que <a href="../fr/Assembly2_Workbench.html" title="Assembly2 Workbench/fr">Assembly2</a> n'est pas maintenu, il n'est donc pas recommand&eacute; pour les nouveaux mod&egrave;les.
-</p>
-</div>
-<p>Les ateliers d'assemblage utilisent des contraintes et des expressions pour cr&eacute;er des relations entre les objets de votre mod&egrave;le, afin de lier math&eacute;matiquement les objets en place, par exemple, "cette face doit coller &agrave; cette autre face", "ce cylindre doit &ecirc;tre concentrique &agrave; ce cercle "," ce point doit suivre ce bord " etc...
+<p>Vous pouvez &eacute;galement utiliser l'atelier <span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly_Workbench.html" title="Assembly Workbench/fr">Assembly</a> int&eacute;gr&eacute; ou des extensions, comme <span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/A2plus_Workbench.html" title="A2plus Workbench/fr">A2plus</a>, <span typeof="mw:File"><a href="../index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="../File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly3_Workbench.html" title="Assembly3 Workbench/fr">Assembly3</a> ou <span typeof="mw:File"><a href="../index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="../File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly4_Workbench.html" title="Assembly4 Workbench/fr">Assembly4</a>. Noter que <a href="../fr/Assembly2_Workbench.html" title="Assembly2 Workbench/fr">Assembly2</a> n'est pas maintenu, il n'est donc pas recommand&eacute; pour les nouveaux mod&egrave;les.
+</p><p>Les ateliers d'assemblage utilisent des contraintes et des expressions pour cr&eacute;er des relations entre les objets de votre mod&egrave;le, afin de lier math&eacute;matiquement les objets en place, par exemple, "cette face doit coller &agrave; cette autre face", "ce cylindre doit &ecirc;tre concentrique &agrave; ce cercle "," ce point doit suivre ce bord " etc...
 </p><p>Il s'agit d'une utilisation avanc&eacute;e du logiciel qui est normalement utilis&eacute; dans les syst&egrave;mes m&eacute;caniques complexes. Si votre <a href="../fr/Model.html" title="Model/fr">mod&egrave;le</a> n'est pas tr&egrave;s complexe, l'utilisation d'un atelier d'assemblage peut ne pas &ecirc;tre n&eacute;cessaire.
 </p><p><span id="Notes"></span>
 </p>
@@ -108,33 +105,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114191809
+Cached time: 20260114191907
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.133 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.132 seconds
 Preprocessor visited node count: 412/1000000
 Post&#8208;expand include size: 33867/2097152 bytes
 Template argument size: 13458/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1555/5000000 bytes
+Unstrip post&#8208;expand size: 1559/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.061      1 -total
- 49.94%   10.518      1 Template:Std_Base_navi/fr
- 31.78%    6.694      3 Template:Navigation_menu_2
- 14.32%    3.016      1 Template:Document_objects_navi/fr
- 12.09%    2.547      1 Template:Userdocnavi/fr
-  9.61%    2.023      1 Template:Caption
-  6.66%    1.403      1 Template:Button
-  5.46%    1.150      1 Template:TOCright
+100.00%   18.398      1 -total
+ 42.05%    7.736      1 Template:Std_Base_navi/fr
+ 41.73%    7.678      3 Template:Navigation_menu_2
+ 17.73%    3.261      1 Template:Document_objects_navi/fr
+ 16.22%    2.985      1 Template:Userdocnavi/fr
+  8.37%    1.540      1 Template:Caption
+  6.85%    1.261      1 Template:TOCright
+  6.02%    1.108      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114191809 and revision id 1738492. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114191907 and revision id 1738494. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
