Updated page Assembly/fr

--- a/wiki/fr/Assembly.html
+++ b/wiki/fr/Assembly.html
@@ -31,7 +31,7 @@
 </p><p><span id="Constrained_assembly"></span>
 </p>
 <h3><span class="mw-headline" id="Assemblage_contraint">Assemblage contraint</span></h3>
-<p>Vous pouvez &eacute;galement utiliser l'atelier <span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly_Workbench.html" title="Assembly Workbench/fr">Assembly</a> int&eacute;gr&eacute; ou des extensions, comme <span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/A2plus_Workbench.html" title="A2plus Workbench/fr">A2plus</a>, <span typeof="mw:File"><a href="../index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="../File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly3_Workbench.html" title="Assembly3 Workbench/fr">Assembly3</a> ou <span typeof="mw:File"><a href="../index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="../File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly4_Workbench.html" title="Assembly4 Workbench/fr">Assembly4</a>. Noter que <a href="../fr/Assembly2_Workbench.html" title="Assembly2 Workbench/fr">Assembly2</a> n'est pas maintenu, il n'est donc pas recommand&eacute; pour les nouveaux mod&egrave;les.
+<p>Vous pouvez &eacute;galement utiliser l'atelier <span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly_Workbench.html" title="Assembly Workbench/fr">Assembly</a> int&eacute;gr&eacute; ou des extensions, comme <span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/A2plus_Workbench.html" title="A2plus Workbench/fr">A2plus</a>, <span typeof="mw:File"><a href="../index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="../File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly3_Workbench.html" title="Assembly3 Workbench/fr">Assembly3</a> ou <span typeof="mw:File"><a href="../index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="../File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Assembly4_Workbench.html" title="Assembly4 Workbench/fr">Assembly4</a>. Notez que <a href="../fr/Assembly2_Workbench.html" title="Assembly2 Workbench/fr">Assembly2</a> n'est pas maintenu, il n'est donc pas recommand&eacute; pour les nouveaux mod&egrave;les.
 </p><p>Les ateliers d'assemblage utilisent des contraintes et des expressions pour cr&eacute;er des relations entre les objets de votre mod&egrave;le, afin de lier math&eacute;matiquement les objets en place, par exemple, "cette face doit coller &agrave; cette autre face", "ce cylindre doit &ecirc;tre concentrique &agrave; ce cercle "," ce point doit suivre ce bord " etc...
 </p><p>Il s'agit d'une utilisation avanc&eacute;e du logiciel qui est normalement utilis&eacute; dans les syst&egrave;mes m&eacute;caniques complexes. Si votre <a href="../fr/Model.html" title="Model/fr">mod&egrave;le</a> n'est pas tr&egrave;s complexe, l'utilisation d'un atelier d'assemblage peut ne pas &ecirc;tre n&eacute;cessaire.
 </p><p><span id="Notes"></span>
@@ -105,12 +105,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114191907
+Cached time: 20260114191933
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.132 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.100 seconds
 Preprocessor visited node count: 412/1000000
 Post&#8208;expand include size: 33867/2097152 bytes
 Template argument size: 13458/2097152 bytes
@@ -121,17 +121,17 @@ Unstrip post&#8208;expand size: 1559/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.398      1 -total
- 42.05%    7.736      1 Template:Std_Base_navi/fr
- 41.73%    7.678      3 Template:Navigation_menu_2
- 17.73%    3.261      1 Template:Document_objects_navi/fr
- 16.22%    2.985      1 Template:Userdocnavi/fr
-  8.37%    1.540      1 Template:Caption
-  6.85%    1.261      1 Template:TOCright
-  6.02%    1.108      1 Template:Button
+100.00%   14.430      1 -total
+ 44.29%    6.391      1 Template:Std_Base_navi/fr
+ 43.88%    6.331      3 Template:Navigation_menu_2
+ 16.15%    2.331      1 Template:Document_objects_navi/fr
+ 16.13%    2.327      1 Template:Userdocnavi/fr
+  7.98%    1.152      1 Template:Caption
+  6.94%    1.001      1 Template:TOCright
+  5.77%    0.832      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114191907 and revision id 1738494. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:186733-0!canonical and timestamp 20260114191933 and revision id 1738496. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
