--- a/wiki/fr/Macros_recipes.html
+++ b/wiki/fr/Macros_recipes.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macros recipes/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macros+recipes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--high" title="Makrorezepte (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrorezepte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macros_recipes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macros recipes (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (1% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
@@ -227,9 +227,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Center_Align_Objects_with_Faces_or_Edges.png&amp;filetimestamp=20170212141827&amp;.html" class="mw-file-description"><img src="../File/Macro_Center_Align_Objects_with_Faces_or_Edges.png" decoding="async" width="24" height="22" class="mw-file-element" data-file-width="64" data-file-height="59"></a></span> <a href="../fr/Macro_Center_Align_Objects_with_Faces_or_Edges.html" title="Macro Center Align Objects with Faces or Edges/fr">Macro Center Align Objects with Faces or Edges</a></span>&nbsp;: traite des contraintes suivantes&nbsp;: contrainte concentrique entre pi&egrave;ces non cylindriques et contrainte sur les faces et/ou les ar&ecirc;tes centrales. Elle fonctionne &eacute;galement avec les nouveaux conteneurs Body et App::Part, ainsi qu'avec la hi&eacute;rarchie STEP.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_CloneConvert.png&amp;filetimestamp=20150725195453&amp;.html" class="mw-file-description"><img src="../File/Macro_CloneConvert.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_CloneConvert.html" title="Macro CloneConvert/fr">Macro CloneConvert</a></span>&nbsp;: cr&eacute;e un clone de l'objet et le convertit dans la position et la taille choisie (inch, mm, m, &micro;m...). L'objet de base est reconnu en mm (FreeCAd base).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep.png&amp;filetimestamp=20160607100845&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="65" data-file-height="64"></a></span> <a href="../fr/Macro_Connect_And_Sweep.html" title="Macro Connect And Sweep/fr">Macro Connect And Sweep</a></span>&nbsp;: cr&eacute;e facilement une connexion entre deux objets, un objet et un point ou entre deux points ou la ligne, la polyligne, le bord s&eacute;lectionn&eacute;s (le centre des objets sont les points de d&eacute;part et d'arriv&eacute;e du balayage) peuvent &ecirc;tre s&eacute;lectionn&eacute;s sous la forme d'un cercle ellipse polygone configurable.</li></ul>
-<div class="mw-translate-fuzzy">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_Cut_Object_For_Magnets.html" title="Macro Cut Object For Magnets/fr">Macro Cut Object For Magnets</a></span>&nbsp;: cette macro permet de d&eacute;couper facilement un objet et d'ins&eacute;rer des trous ronds d'un nombre, d'une largeur et d'une profondeur pr&eacute;d&eacute;finis  de chaque c&ocirc;t&eacute; de la d&eacute;coupe pour y ins&eacute;rer des aimants (ou des chevilles). Cela peut &ecirc;tre utile pour diverses applications d'impression 3D, etc.</li></ul>
-</div>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Std_AxisCross_example.svg&amp;filetimestamp=20200402191429&amp;.html" class="mw-file-description"><img src="../File/Std_AxisCross_example.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="150" data-file-height="150"></a></span> <a href="../fr/Macro_Express_Placement.html" title="Macro Express Placement/fr">Macro Express Placement</a></span>&nbsp;: affiche et modifie rapidement les coordonn&eacute;es de placement d'un objet s&eacute;lectionn&eacute;, directement ou par le biais d'expressions.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FlattenWire.png&amp;filetimestamp=20190704184313&amp;.html" class="mw-file-description"><img src="../File/Macro_FlattenWire.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_FlattenWire.html" title="Macro FlattenWire/fr">Macro FlattenWire</a></span>&nbsp;: aplatit les polylignes qui ne sont pas planaires &agrave; leur coordonn&eacute;e Z m&eacute;diane.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FlattenWire3Points.png&amp;filetimestamp=20190706165929&amp;.html" class="mw-file-description"><img src="../File/Macro_FlattenWire3Points.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_FlattenWire3Points.html" title="Macro FlattenWire3Points/fr">Macro FlattenWire3Points</a></span>&nbsp;: aplatit les polylignes qui ne sont pas planaires &agrave; un plan d&eacute;fini par 3 points.</li></ul>
@@ -411,31 +409,31 @@
 <li>Dans l'onglet <b>Barres d'outils</b>, cr&eacute;ez une nouvelle barre d'outils, puis ajoutez votre macro, en la copiant dans la cat&eacute;gorie <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113123916
+Cached time: 20260114192008
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.497 seconds
-Real time usage: 1.132 seconds
-Preprocessor visited node count: 2863/1000000
+CPU time usage: 0.522 seconds
+Real time usage: 0.820 seconds
+Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 27855/2097152 bytes
 Template argument size: 15164/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1946/5000000 bytes
+Unstrip post&#8208;expand size: 1951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.027      1 -total
- 40.39%   14.957    219 Template:MacroLink
-  5.91%    2.189      6 Template:MenuCommand
-  5.61%    2.078      1 Template:TOCright
-  3.76%    1.391      3 Template:Button
-  3.43%    1.269      1 Template:Version/fr
+100.00%   32.307      1 -total
+ 35.68%   11.528    219 Template:MacroLink
+ 17.66%    5.705      6 Template:MenuCommand
+  5.29%    1.708      1 Template:Version/fr
+  4.39%    1.419      3 Template:Button
+  3.43%    1.109      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1876-0!canonical and timestamp 20260113123915 and revision id 1737842. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1876-0!canonical and timestamp 20260114192007 and revision id 1738498. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
