--- a/wiki/fr/TechDraw_2LineCenterLine.html
+++ b/wiki/fr/TechDraw_2LineCenterLine.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2LineCenterLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2LineCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw 2LinienMittellinie (80% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw 2LinienMittellinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_2LineCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2LineCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 linee (80% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwiema liniami (80% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwiema liniami (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2 &#1083;&#1080;&#1085;&#1080;&#1103;&#1084;&#1080;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; 2&#49440;&#44036; &#51473;&#49900;&#49440; (80% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ajouter une ligne centrale entre 2 lignes
+<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ligne centrale entre 2 lignes
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Ligne centrale entre 2 lignes</b> ajoute une ligne centrale entre deux ar&ecirc;tes.
 </p><p><span typeof="mw:File"><a href="../index.php?title=CL2LinesSample.png&amp;filetimestamp=20190713135936&amp;.html" class="mw-file-description"><img src="../File/CL2LinesSample.png" decoding="async" width="350" height="237" class="mw-file-element" data-file-width="371" data-file-height="251"></a></span>
@@ -130,34 +128,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145911
+Cached time: 20260114195318
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.109 seconds
-Preprocessor visited node count: 372/1000000
-Post&#8208;expand include size: 26085/2097152 bytes
-Template argument size: 10227/2097152 bytes
+CPU time usage: 0.080 seconds
+Real time usage: 0.255 seconds
+Preprocessor visited node count: 371/1000000
+Post&#8208;expand include size: 26061/2097152 bytes
+Template argument size: 10203/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1694/5000000 bytes
+Unstrip post&#8208;expand size: 1704/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.000      1 -total
- 30.31%    6.364      1 Template:TechDraw_Tools_navi/fr
- 23.14%    4.860      2 Template:Navigation_menu_2
- 17.86%    3.751      1 Template:Userdocnavi/fr
- 12.49%    2.624      2 Template:Docnav/fr
- 11.54%    2.423      1 Template:GuiCommand/fr
- 10.37%    2.177      2 Template:Button
-  7.43%    1.561      1 Template:Caption
-  6.79%    1.427      1 Template:MenuCommand
+100.00%   52.494      1 -total
+ 24.50%   12.859      1 Template:TechDraw_Tools_navi/fr
+ 17.62%    9.248      2 Template:Button
+ 16.91%    8.874      1 Template:Userdocnavi/fr
+ 15.42%    8.095      2 Template:Navigation_menu_2
+ 14.49%    7.605      1 Template:GuiCommand/fr
+ 10.13%    5.319      2 Template:Docnav/fr
+  7.41%    3.892      1 Template:Caption
+  6.46%    3.393      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156639-0!canonical and timestamp 20260111145910 and revision id 1734473. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156639-0!canonical and timestamp 20260114195317 and revision id 1738501. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
